==> zoomx/lxyppc-tetrix/quad/ctrl/boards/pic_avr_stm32/bsp/i2c.c <==
#include "i2c.h"
#include "stm32f10x.h"
#include "bsp.h"
#define I2C_TIMEOUT  0x8000
#define I2C_DEFAULT_TIMEOUT 30000
#define  I2C1_SCL_PIN       GPIO_Pin_6
#define  I2C1_SDA_PIN       GPIO_Pin_7
#define  I2C1_GPIO_PORT     GPIOB
#define  I2C2_SCL_PIN       GPIO_Pin_10
#define  I2C2_SDA_PIN       GPIO_Pin_11
#define  I2C2_GPIO_PORT     GPIOB

uint8_t i2cWrite(I2C_TypeDef* I2Cx, I2C_context_t * context, uint8_t addr_, uint8_t reg_, uint8_t data)
{
    return i2cWriteBuffer(I2Cx, context, addr_, reg_, 1, &data);
}

uint8_t i2cRead(I2C_TypeDef* I2Cx, I2C_context_t * context, uint8_t addr_, uint8_t reg_, uint8_t len, uint8_t * buf)
{
    uint32_t timeout = I2C_DEFAULT_TIMEOUT;

    context->addr = addr_ << 1;
    context->reg = reg_;
    context->writing = 0;
    context->reading = 1;
    context->read_p = buf;
    context->write_p = buf;
    context->bytes = len;
    context->busy = 1;

    if (!(I2Cx->CR2 & I2C_IT_EVT))      //if we are restarting the driver
    {
        if (!(I2Cx->CR1 & 0x0100))      //ensure sending a start
        {
            while (I2Cx->CR1 & 0x0200) {;
            }                   //wait for any stop to finish sending
            I2C_GenerateSTART(I2Cx, ENABLE);    //send the start for the new job
        }
        I2C_ITConfig(I2Cx, I2C_IT_EVT | I2C_IT_ERR, ENABLE);    //allow the interrupts to fire off again
    }

    while (context->busy && --timeout > 0);
    if (timeout == 0) {
        context->i2cErrorCount++;        // reinit peripheral + clock out garbage
        i2c_init(I2Cx);
        return 0;
    }

    return 1;
}

void i2c_init(I2C_TypeDef * I2C)
{
    NVIC_InitTypeDef NVIC_InitStructure;
    GPIO_InitTypeDef GPIO_InitStructure;
    I2C_InitTypeDef I2C_InitStructure;
    
    uint16_t I2C_SCL_PIN,I2C_SDA_PIN;
    GPIO_TypeDef* I2C_PORT;
    I2C_context_t* context;
    if(I2C == I2C1){
        I2C_SCL_PIN = I2C1_SCL_PIN;
        I2C_SDA_PIN = I2C1_SDA_PIN;
        I2C_PORT = I2C1_GPIO_PORT;
        context = &i2c1_context;
    }else if(I2C == I2C2){
        I2C_SCL_PIN = I2C2_SCL_PIN;
        I2C_SDA_PIN = I2C2_SDA_PIN;
        I2C_PORT = I2C2_GPIO_PORT;
        context = &i2c2_context;
    }else{
        I2C_SCL_PIN = I2C1_SCL_PIN;
        I2C_SDA_PIN = I2C1_SDA_PIN;
        I2C_PORT = I2C1_GPIO_PORT;
        context = &i2c1_context;
    }
    
    if(context->init) return;
    
    RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C1, ENABLE);
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);

    i2cUnstick(I2C);               // clock out stuff to make sure slaves arent stuck

    // SCL  PB6
    // SDA  PB7

    GPIO_InitStructure.GPIO_Pin = I2C_SCL_PIN | I2C_SDA_PIN;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;

    GPIO_Init(I2C_PORT, &GPIO_InitStructure);

    // Init I2C
    I2C_DeInit(I2C);
    I2C_StructInit(&I2C_InitStructure);

    I2C_ITConfig(I2C, I2C_IT_EVT | I2C_IT_ERR, DISABLE);       //Disable EVT and ERR interrupts - they are enabled by the first request

    I2C_InitStructure.I2C_Mode = I2C_Mode_I2C;
    I2C_InitStructure.I2C_DutyCycle = I2C_DutyCycle_2;
    I2C_InitStructure.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;
    I2C_InitStructure.I2C_ClockSpeed = 400000;

    I2C_Init(I2C, &I2C_InitStructure);

    I2C_Cmd(I2C, ENABLE);

    if(I2C == I2C1){
        // I2C ER Interrupt
        NVIC_InitStructure.NVIC_IRQChannel = I2C1_ER_IRQn;
        NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
        NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
        NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;

        NVIC_Init(&NVIC_InitStructure);

        // I2C EV Interrupt
        NVIC_InitStructure.NVIC_IRQChannel = I2C1_EV_IRQn;
        NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
        NVIC_Init(&NVIC_InitStructure);
    }else if(I2C == I2C2){
        // I2C ER Interrupt
        NVIC_InitStructure.NVIC_IRQChannel = I2C2_ER_IRQn;
        NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
        NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
        NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;

        NVIC_Init(&NVIC_InitStructure);

        // I2C EV Interrupt
        NVIC_InitStructure.NVIC_IRQChannel = I2C2_EV_IRQn;
        NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
        NVIC_Init(&NVIC_InitStructure);
    }
    
    context->init = 1;
}

void I2C1_ER_IRQHandler(void)
{
    i2c_er_handler(I2C1, &i2c1_context);
}

void I2C1_EV_IRQHandler(void)
{
    i2c_ev_handler(I2C1, &i2c1_context);
}
